--- a/tcp_ip_with_c/.vscode/settings.json
+++ b/tcp_ip_with_c/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
     "files.associations": {
         "socket.h": "c"
-    }
+    },
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "prettier.printWidth": 80,
+    "prettier.tabWidth": 4,
+    "[c]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools"
+    },
+    "code-runner.runInTerminal": true,
+    "debug.inlineValues": "on"
 }
